; ModuleID = '/home/carl/AnghaBench/h2o/deps/picotls/lib/extr_uecc.c_ptls_minicrypto_init_secp256r1sha256_sign_certificate.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/picotls/lib/extr_uecc.c_ptls_minicrypto_init_secp256r1sha256_sign_certificate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32 }
%struct.TYPE_8__ = type { i32, i32 }

@PTLS_ERROR_INCOMPATIBLE_KEY = common dso_local global i32 0, align 4
@secp256r1sha256_sign = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ptls_minicrypto_init_secp256r1sha256_sign_certificate(%struct.TYPE_7__* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_8__, align 4
  %5 = alloca %struct.TYPE_7__*, align 8
  %6 = bitcast %struct.TYPE_8__* %4 to i64*
  store i64 %1, i64* %6, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %4, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = sext i32 %8 to i64
  %10 = icmp ne i64 %9, 4
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load i32, i32* @PTLS_ERROR_INCOMPATIBLE_KEY, align 4
  store i32 %12, i32* %3, align 4
  br label %24

13:                                               ; preds = %2
  %14 = load i32, i32* @secp256r1sha256_sign, align 4
  %15 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %16 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %15, i32 0, i32 1
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 0
  store i32 %14, i32* %17, align 4
  %18 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %19 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %4, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @memcpy(i32 %20, i32 %22, i32 4)
  store i32 0, i32* %3, align 4
  br label %24

24:                                               ; preds = %13, %11
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @memcpy(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
